# Fundr

./: .replit  Anchor.toml  CRITICAL_SECURITY_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_STATUS.md  GITHUB_SETUP_STEPS.md  JUPITER_TRADING_EXPLANATION.md  MOBILE_DEPLOYMENT_SETUP.md  MVP_CHECKLIST.md  QUICK_DEPLOY_GUIDE.md  SECURITY_AUDIT.md  SMART_CONTRACT_GUIDE.md  WHITEPAPER.md  build-solana.sh  create-program-simulation.ts  deploy-direct.sh  deploy-simple.sh  deployment-config.json  deployment-info.json  package-lock.json  package.json  replit-solana-deploy.ts  replit.md  wallet-info.txt
attached_assets/: Pasted--Platform-Run-Index-Funds-Overview-The-Fundr-platform-will-feature-a-set-of-official-automated--1753890235720_1753890235721.txt  Pasted-Here-is-your-detailed-concept-outline-for-the-Fundr-DApp-clean-specific-and-stripped-of--1753847990675_1753847990676.txt  Pasted-Here-s-your-full-detailed-Replit-prompt-in-a-single-copy-paste-block-to-guide-the-agent-clearly-1753888911545_1753888911546.txt
client/: index.html
client/src/: App.tsx  main.tsx  (+1 more)
programs/fundr/: Cargo-bpf.toml  Cargo.toml
programs/fundr/src/: errors.rs  lib-minimal.rs  lib.rs  lib_old.rs  utils.rs
programs/fundr/src/instructions/: create_fund.rs  deposit.rs  mod.rs  rebalance.rs  withdraw.rs
programs/fundr/src/state/: fund.rs  mod.rs  user_stake.rs
scripts/: deploy-program.sh  deploy-simulation.js  setup-devnet.js  test-devnet.js  test-wallet.json
server/: fund-routes.ts  platform-funds.ts  routes.ts  storage.ts  twitter-auth.ts
shared/: schema.ts  solana-types.ts
(+44 files in other folders)
